--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     .back-to-top { position:fixed; bottom:15px; right:15px; padding:12px 18px; background:#000; color:#f5d742; text-decoration:none; font-weight:bold; border:3px solid #f5d742; font-size:1em; border-radius:8px; z-index:100; }
     .back-to-top:hover { background:#f5d742; color:#000; }
     .hidden-counter-btn { position:absolute; bottom:80px; right:20px; width:100px; height:50px; opacity:0; cursor:pointer; z-index:999; }
+    .all-legislators-btn { display:block; width:90%; max-width:400px; margin:20px auto; padding:18px; font-size:1.8em; font-weight:bold; background:#000; color:#f5d742; text-decoration:none; border:5px solid #000; text-transform:uppercase; box-sizing:border-box; }
+    .all-legislators-btn:hover { background:#f5d742; color:#000; }
     @media (min-width:768px) {
       h1 { font-size:4.5em; }
-      .donate-btn,.social-buttons a,.share-btn { display:inline-block; width:auto; margin:20px; }
+      .donate-btn,.social-buttons a,.share-btn,.all-legislators-btn { display:inline-block; width:auto; margin:20px; }
       .counter { font-size:4.5em; }
     }
   </style>
@@ -105,6 +107,7 @@
         <p><strong>Subject:</strong> Abolish Property Taxes – Vote YES in 2026</p>
         <p>Dear [Rep Name],<br>I demand you vote to end property taxes forever. I signed at NoPropertyTaxSC.com.<br><strong>I am not a slave to the state. I deserve full ownership.</strong><br>Sincerely, [Your Name]</p>
       </div>
+      <a href="https://www.scstatehouse.gov/email.php?chamber=B" target="_blank" class="all-legislators-btn">Contact All Legislators</a>
     </div>
   </main>
   <footer>
@@ -126,3 +129,4 @@
     }
   </script>
 </body>
+</html>
