--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     .content { max-width:900px; margin:0 auto 40px; padding:15px; }
     .petition-text { background:white; padding:25px; border:6px solid #000; margin:30px auto; text-align:left; font-size:1em; max-height:500px; overflow-y:auto; }
     .petition-text h2 { font-size:1.8em; text-align:center; }
+    .call-to-action { background:#000; color:#f5d742; padding:25px; margin:40px auto; max-width:900px; font-size:1.4em; font-weight:bold; border:6px solid #000; }
     .form-box { margin:40px auto; max-width:100%; border:6px solid #000; background:white; overflow:hidden; position:relative; }
     iframe { width:100%; height:1200px; border:none; }
     .counter { font-size:3.2em; margin:40px 10px; padding:20px; border:6px solid #000; background:rgba(0,0,0,0.1); display:inline-block; }
@@ -27,7 +28,6 @@
     .social-buttons a:hover, .share-btn:hover { background:#f5d742; color:#000; }
     .reps-section { background:white; padding:30px; border:6px solid #000; margin:50px auto; max-width:900px; font-size:1em; }
     .reps-section h2 { font-size:1.8em; }
-    .zip-lookup { margin:20px 0; }
     .zip-lookup input { width:70%; padding:12px; font-size:1.2em; border:3px solid #000; }
     .find-btn { width:80%; padding:14px; font-size:1.4em; margin-top:10px; }
     .email-template { font-size:1.1em; padding:20px; }
@@ -49,14 +49,39 @@
   </header>
   <main class="content">
     <img src="NPTSC final.jpg" alt="No Property Tax SC Flag" class="flag">
+
+    <!-- FULL PETITION TEXT -->
     <div class="petition-text">
       <h2>South Carolina Petition to Abolish All Property Taxes</h2>
-      <!-- your full petition text here (unchanged) -->
       <p><strong>Title:</strong><br>Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
       <p>To the Honorable Members of the South Carolina General Assembly and Governor Henry McMaster:</p>
       <p>We, the undersigned residents and taxpayers of South Carolina, respectfully demand the complete and permanent abolition of all ad valorem property taxes on real estate and personal property in our state.</p>
-      <!-- rest of petition text -->
+      <p>For far too long, South Carolinians have been forced to pay an annual ransom to government simply to keep what we have worked a lifetime to own. A tax on property is not a tax on luxury—it is a tax on existence. It punishes families for putting down roots, seniors for staying in the homes they raised their children in, farmers for feeding our state, and small businesses for creating jobs. It drives retirees out of South Carolina and discourages new families and employers from moving in.</p>
+      <p>No citizen of a free state should ever face the threat of a tax lien or forced sale of their home because they fell behind on an arbitrary government bill tied to the assessed value of their property rather than their ability to pay.</p>
+      <p>We recognize that schools, public safety, roads, and local services must be funded. Therefore, we call on the General Assembly to:</p>
+      <ol>
+        <li>Permanently eliminate all property taxes on owner-occupied homes, rental properties, commercial buildings, farms, and personal property.</li>
+        <li>Replace the lost revenue through a combination of:
+          <ul>
+            <li>A modest, revenue-neutral increase in the state sales tax with enhanced rebates or credits for low- and fixed-income households</li>
+            <li>Closing corporate loopholes and special-interest exemptions</li>
+            <li>Dedicating a portion of existing surplus and economic growth revenue</li>
+            <li>Any other broad-based, voluntary consumption or economic activity taxes that do not punish ownership</li>
+          </ul>
+        </li>
+        <li>Place a binding constitutional amendment on the next general election ballot to prohibit any future legislature from re-imposing property taxes without a two-thirds supermajority vote of both houses and approval by the people in a statewide referendum.</li>
+      </ol>
+      <p>South Carolina already has one of the lowest property tax burdens in America—yet we still collect billions every year while our people live in fear of the next reassessment. It is time to finish the job.</p>
+      <p>We, the undersigned, declare that ownership is not a privilege to be rented from the government—it is a right.</p>
+      <p><strong>Let South Carolina lead the nation once again.<br>Abolish property taxes now.<br>Make South Carolina the True Property Tax-Free State.</strong></p>
       <p><strong>We demand action in the 2026 legislative session.</strong></p>
+    </div>
+
+    <!-- NEW CALL-TO-ACTION BOX -->
+    <div class="call-to-action">
+      If you agree with this petition, contact your state Representative using the box following the petition signing sheet.  
+      Use your ZIP code to look up your state Representatives, then return back to this website and click the “CONTACT ALL LEGISLATORS” button.  
+      Find your Rep’s name and write them a message telling them to abolish property tax.
     </div>
 
     <!-- Google Form Petition -->
@@ -78,10 +103,10 @@
         <p><strong>Subject:</strong> Abolish Property Taxes – Vote YES in 2026</p>
         <p>Dear [Rep Name],<br>I demand you vote to end property taxes forever. I signed at NoPropertyTaxSC.com.<br><strong>I am not a slave to the state. I deserve full ownership.</strong><br>Sincerely, [Your Name]</p>
       </div>
-      <a href="https://www.scstatehouse.gov/email.php?chamber=B" target="_blank" class="all-legislators-btn">Contact All Legislators</a>
+      <a href="https://www.scstatehouse.gov/email.php?chamber=B" target="_blank" class="all-legislators-btn">CONTACT ALL LEGISLATORS</a>
     </div>
 
-    <!-- Live Signature Counter – now after Contact Reps -->
+    <!-- Live Signature Counter -->
     <div class="counter" id="liveCount">100+<br>have signed the petition</div>
 
     <!-- Share + Social + Donate -->
